--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-aws-pack": "^1.0.2",
+    "ember-cli-dotenv": "^2.2.1",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
