--- a/.template.env
+++ b/.template.env
@@ -7,3 +7,5 @@ IDENTITY_POOL_ID=[Identity Pool ID]
 LAMBDA_REGION=[Lambda AWS Region]
 LAMBDA_API=[Lambda API Version]
 LAMBDA_FUNCTION=[Lambda Function]
+CFN_DOMAINNAME=[CFN Domain Name]
+CFN_CFCERTIFICATE=[CFN Certificate ARN]
