--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "ember-cli-bootstrap-4": "^0.6.1",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-deploy": "^1.0.2",
-    "ember-cli-deploy-aws-pack": "^1.0.2",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-cloudformation": "^0.1.0",
+    "ember-cli-deploy-display-revisions": "^1.0.0",
+    "ember-cli-deploy-gzip": "^1.0.1",
+    "ember-cli-deploy-manifest": "^1.1.0",
+    "ember-cli-deploy-revision-data": "^1.0.0",
+    "ember-cli-deploy-s3": "^1.4.0",
     "ember-cli-dotenv": "^2.2.1",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
