--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-cli-deploy-s3": "^1.4.0",
     "ember-cli-dotenv": "^2.2.1",
     "ember-cli-eslint": "^4.2.3",
+    "ember-cli-file-picker": "0.0.12",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
